<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Native-Addon Tools</string>
	<string name="start_compiling">Generate method table</string>
	<string name="demangle_name">Demangle method name</string>
	<string name="main_activity_tag_tools">Tools</string>
	<string name="main_activity_tag_others">Others</string>
	<string name="next">Next Step</string>
	<string name="generate">Generate</string>
	<string name="exit_app">Exit</string>
	<string name="running">Run?</string>
	<string name="message_running">Click continue to run,\nit will take you about 7 seconds.</string>
	<string name="title_error">ERROR</string>
	<string name="message_error_file_not_found">Counldn\'t found the file.</string>
	<string name="message_error_no_enter">Please enter the path of libminecraftpe.so.</string>
	<string name="chooseactivity_libmcpe">The path of libminecraftpe.so:</string>
	<string name="chooseactivity_undemangledname">The path of undemangled methods table file:</string>
	<string name="chooseactivity_demangledname">The path of demangled method table file:</string>
	<string name="chooseactivity_title">Prefect these informations:</string>
	<string name="dialog_continue">Continue</string>
	<string name="dialog_cancel">Cancel</string>
	<string name="done">Done!</string>
	<string name="github_page">Github Page</string>
	<string name="use_lines">Write with line number</string>
	<string name="about">About</string>
	<string name="convert">Convert</string>
	<string name="clear">Clear</string>
	<string name="copy">Copy to clipboard</string>
	<string name="activity_generator">Method Table Generator</string>
	<string name="activity_convertor">Demangler</string>
	<string name="copyRight">Copyright © 2016-2017 MCAL Team</string>
	<string name="joinMCAL">Join MCAL Team!(Chinese QQ Group)</string>
	<string name="genTemplate">Generate Native-Addon Template</string>
	<string name="templateGenerator">Template Generator</string>
	<string name="noQQ">You haven\'t install QQ.</string>
	<string name="projectName">Project Name:</string>
	<string name="projectAppName">App Name:</string>
	<string name="projectPackage">Package Name:</string>
	<string name="useJavaCode">Use Android Activities</string>
	<string name="targetMCPE">Target MCPE Version Name:</string>
	<string name="error_project_name">Unavailable Project Name.</string>
	<string name="error_package">Unavailable Package Name</string>
	<string name="useAssets">Use Assets</string>
	<string name="temp_type">Template Type:</string>
	<string-array name="temps">
		<item name="temp_empty">Empty</item>
		<item name="temp_jni">With JNI_OnLoad</item>
		<item name="temp_base">With Some MSHooks</item>
	</string-array>
</resources>
