<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="top">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="top">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/chooseactivity_title"/>

			<View
				android:layout_height="1dp"
				android:background="?android:attr/dividerVertical"
				android:layout_width="match_parent"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/projectName"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/genactivityprojectName"
				android:lines="1"
				android:singleLine="true"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/projectAppName"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/genactivityprojectAppName"
				android:lines="1"
				android:singleLine="true"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/projectPackage"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/genactivityprojectPackage"
				android:lines="1"
				android:singleLine="true"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/targetMCPE"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/genactivitytargetMCPE"
				android:lines="1"
				android:singleLine="true"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/temp_type"/>
			
			<Spinner
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:entries="@array/temps"
				android:id="@+id/gentemplateactivitySpinner"/>

			<CheckBox
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/useJavaCode"
				android:id="@+id/genactivityuseJavaCode"/>

			<CheckBox
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/useAssets"
				android:id="@+id/genactivityuseAssets"/>
			
		</LinearLayout>

	</ScrollView>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="bottom|center">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/generate"
			android:layout_width="match_parent"
			android:onClick="nextStep"/>

	</LinearLayout>

</LinearLayout>

