<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="top">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="top">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/chooseactivity_title"/>

			<View
				android:layout_height="1dp"
				android:background="?android:attr/dividerVertical"
				android:layout_width="match_parent"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/chooseactivity_libmcpe"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/chooseactivityEditTextlibname"
				android:lines="1"
				android:singleLine="true"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/chooseactivity_demangledname"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/chooseactivityEditTextdemangledname"
				android:lines="1"
				android:singleLine="true"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/chooseactivity_undemangledname"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/chooseactivityEditTextundemangledname"
				android:lines="1"
				android:singleLine="true"/>

			<com.gc.materialdesign.views.CheckBox
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/use_lines"
				android:id="@+id/chooseactivityCheckBoxUseLines"/>

		</LinearLayout>

	</ScrollView>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="bottom|center">

		<com.gc.materialdesign.views.ButtonFlat
			android:layout_height="wrap_content"
			android:text="@string/generate"
			android:layout_width="match_parent"
			android:onClick="nextStep"/>

	</LinearLayout>

</LinearLayout>

