<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="bottom">

		<EditText
			android:layout_width="fill_parent"
			android:layout_height="match_parent"
			android:id="@+id/demanglenameactivityEditText"/>

		<Button
			android:layout_height="50dp"
			android:text="@string/clear"
			android:layout_width="match_parent"
			android:onClick="clear"/>
		
		<Button
			android:layout_height="50dp"
			android:text="@string/convert"
			android:layout_width="match_parent"
			android:onClick="convert"/>
		
		<Button
			android:layout_height="50dp"
			android:text="@string/copy"
			android:layout_width="match_parent"
			android:onClick="copy"/>

	</LinearLayout>

</LinearLayout>

