<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="top">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/copyRight"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:gravity="bottom|center">

		<Button
			android:layout_height="wrap_content"
			android:text="@string/github_page"
			android:layout_width="match_parent"
			android:onClick="githubPage"/>
		
		<Button
			android:layout_height="wrap_content"
			android:text="@string/joinMCAL"
			android:layout_width="match_parent"
			android:onClick="joinMCAL"/>

	</LinearLayout>

</LinearLayout>

